checkbox and radio ::after were still setting their visibility, which is no longer required

--- a/type_only/styles/form.scss
+++ b/type_only/styles/form.scss
@@ -130,7 +130,6 @@ input[type="radio"] {
 	
 	&::after {
 		content: ")";
-		visibility: visible;
 	}
 }
 
@@ -143,7 +142,6 @@ input[type="checkbox"] {
 	
 	&::after {
 		content: "]";
-		visibility: visible;
 	}
 }
 
